--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,8 @@
     "name": "Anime Tube",
     "description": "A comprehensive Frontend and Backend video streaming platform dedicated to anime content with robust documentation, detailed architecture diagrams, and a polished final result showcasing seamless user experience.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763096246/AnimeTubeHome1_lu1ieb.png  ",
-    "price": 0,
+    "price": 2100,
+    "offerPrice": 1499,
     "category": "Entertainment",
     "rating": 4.8,
     "repoURL": "https://github.com/yourrepo/animetube",
@@ -20,6 +21,7 @@
     "description": "A user-friendly E-Commerce platform for furniture and sofas, integrating Frontend and Backend with clear documentation and visual system diagrams, culminating in a fully functional final product.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763196493/Screenshot_2025-11-15_141552_lgd3z3.png",
     "price": 1500,
+    "offerPrice": 999,
     "category": "E-Commerce",
     "rating": 4.5,
     "repoURL": "",
@@ -35,6 +37,7 @@
     "description": "A full-stack project offering construction service management. Includes complete frontend and backend workflows, comprehensive documentation, and system architecture diagrams leading to a professional final deployment.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763196745/Screenshot_2025-11-15_142032_vwfslu.png",
     "price": 2000,
+    "offerPrice": 1599,
     "category": "Services",
     "rating": 4.7,
     "repoURL": "https://github.com/yourrepo/construction-services",
@@ -50,6 +53,7 @@
     "description": "An advanced car rental system featuring rich frontend interfaces and powerful backend support. Detailed documentation and diagrams illustrate the system design and functionalities, concluding with a sophisticated final result.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763197019/Carrental_mhl2hh.png",
     "price": 1200,
+    "offerPrice": 899,
     "category": "Transportation",
     "rating": 4.3,
     "repoURL": "https://github.com/yourrepo/car-rental",
@@ -65,6 +69,7 @@
     "description": "A complete e-commerce solution for a fashion brand including frontend styling, backend API integration, and thorough documentation with diagrams, providing buyers a seamless shopping experience.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763197428/AFashion_mbw3yh.png",
     "price": 1800,
+    "offerPrice": 1299,
     "category": "E-Commerce",
     "rating": 4.6,
     "repoURL": "https://github.com/yourrepo/fashion-ecommerce",
@@ -79,7 +84,8 @@
     "name": "Donate-red Blood Bank",
     "description": "A digital blood bank solution involving frontend and backend integration. Documentation and system diagrams thoroughly cover the process from donation registration to blood request fulfillment.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763197667/ADonate_v6jbqs.png",
-    "price": 0,
+    "price": 1200,
+    "offerPrice": 899,
     "category": "Healthcare",
     "rating": 4.9,
     "repoURL": "https://github.com/yourrepo/bloodbank",
@@ -94,7 +100,8 @@
     "name": "Fruit Mart",
     "description": "An online fruit marketplace with detailed frontend and backend development, complemented by documentation and infrastructure diagrams for smooth product management and user interaction.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763198012/AFruitMart_xledrc.png",
-    "price": 300,
+    "price": 1600,
+    "offerPrice": 1199,
     "category": "E-Commerce",
     "rating": 4.1,
     "repoURL": "https://github.com/yourrepo/fruitmart",
@@ -109,7 +116,8 @@
     "name": "E-Learning Platform",
     "description": "An educational platform featuring course management, user authentication, and interactive features. Includes full documentation and detailed architectural diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763198337/AELearning_bvn72n.png",
-    "price": 2500,
+    "price": 2200,
+    "offerPrice": 1299,
     "category": "Education",
     "rating": 4.7,
     "repoURL": "https://github.com/yourrepo/elearning",
@@ -124,7 +132,8 @@
     "name": "Electronic Shop",
     "description": "A fully featured electronic goods e-commerce store with backend API, rich frontend, extensive documentation, and process diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763198512/AEletro_jpep5q.png",
-    "price": 1000,
+    "price": 1100,
+    "offerPrice": 799,
     "category": "E-Commerce",
     "rating": 4.3,
     "repoURL": "https://github.com/yourrepo/electronicshop",
@@ -139,7 +148,8 @@
     "name": "Fashion Hub",
     "description": "A comprehensive e-commerce platform specialized in fashion products with integrated frontend/backend and extensive documentation including diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763198773/AFashion_mejcfc.png",
-    "price": 1500,
+    "price": 1800,
+    "offerPrice": 1199,
     "category": "E-Commerce",
     "rating": 4.6,
     "repoURL": "https://github.com/yourrepo/fashion-hub",
@@ -154,7 +164,8 @@
     "name": "Fast Food Site",
     "description": "A dynamic website for fast food services implementing complete frontend and backend solutions along with detailed system architecture diagrams and final deployment.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763198920/AFastfood_w9xk6b.png",
-    "price": 800,
+    "price": 1200,
+    "offerPrice": 799,
     "category": "Food Delivery",
     "rating": 4.1,
     "repoURL": "https://github.com/yourrepo/fast-food-site",
@@ -169,7 +180,8 @@
     "name": "Fitness Site",
     "description": "A fitness and wellness site featuring workout plans, health tracking with full backend integration and clear documentation supported by system diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763208645/Aft_d0xlpj.png",
-    "price": 1200,
+    "price": 1800,
+    "offerPrice": 1399,
     "category": "Health & Fitness",
     "rating": 4.7,
     "repoURL": "https://github.com/yourrepo/fitness-site",
@@ -184,7 +196,8 @@
     "name": "Food Mart",
     "description": "Online grocery delivery platform with real-time inventory management, an intuitive frontend, backend support and detailed system documentation.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763199481/AFoodMart_ns86k7.png",
-    "price": 900,
+    "price": 1800,
+    "offerPrice": 1499,
     "category": "E-Commerce",
     "rating": 4.2,
     "repoURL": "https://github.com/yourrepo/food-mart",
@@ -199,7 +212,8 @@
     "name": "Fruit-Veggies",
     "description": "A specialized marketplace for fresh fruits and vegetables with seamless frontend and backend connectivity and thorough documentation.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763199160/AFruit_q8x7ae.png",
-    "price": 750,
+    "price": 1200,
+    "offerPrice": 899,
     "category": "E-Commerce",
     "rating": 4.5,
     "repoURL": "https://github.com/yourrepo/fruit-veggies",
@@ -214,7 +228,8 @@
     "name": "Gym Gyaan",
     "description": "Fitness knowledge-sharing platform with a fully integrated frontend/backend including documentation and system design diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763199739/AGymGyaan_fqi9pv.png",
-    "price": 1100,
+    "price": 1500,
+    "offerPrice": 1199,
     "category": "Health & Fitness",
     "rating": 4.4,
     "repoURL": "https://github.com/yourrepo/gym-gyaan",
@@ -230,6 +245,7 @@
     "description": "Comprehensive hotel booking system with real-time availability, front-end booking interface, backend booking management, diagrammatic documentation, and polished final results.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763208493/Aho_ldnmrp.png",
     "price": 1300,
+    "offerPrice": 899,
     "category": "Travel & Hospitality",
     "rating": 4.6,
     "repoURL": "https://github.com/yourrepo/hotel-booking",
@@ -245,6 +261,7 @@
     "description": "An end-to-end import and export service management platform with a powerful backend, sleek frontend, detailed documentation, and comprehensive architectural diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763200347/AExport_qvqyra.png",
     "price": 2000,
+    "offerPrice": 1499,
     "category": "Business",
     "rating": 4.7,
     "repoURL": "https://github.com/yourrepo/import-export",
@@ -260,6 +277,7 @@
     "description": "A secure and user-friendly life insurance management system, providing policy management, claims, and documentation with detailed system diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763200780/ALifeSure_wnokgy.png",
     "price": 1800,
+    "offerPrice": 1299,
     "category": "Finance",
     "rating": 4.5,
     "repoURL": "https://github.com/yourrepo/life-insurance",
@@ -275,6 +293,7 @@
     "description": "An innovative logistics tracking and management platform with real-time updates, thorough documentation, and system architecture diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763201183/Alogis_cvaco2.png",
     "price": 2200,
+    "offerPrice": 1599,
     "category": "Supply Chain",
     "rating": 4.6,
     "repoURL": "https://github.com/yourrepo/logistics",
@@ -290,6 +309,7 @@
     "description": "A sleek and functional hotel booking and information site integrating user-friendly frontend, robust backend and architectural diagrams with documentation.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763201495/AHotel-site_p3l015.png",
     "price": 1400,
+    "offerPrice": 999,
     "category": "Hospitality",
     "rating": 4.4,
     "repoURL": "https://github.com/yourrepo/hotel-site",
@@ -304,7 +324,8 @@
     "name": "Mobile Repairing",
     "description": "Complete platform for mobile repairing services featuring ticket management, scheduling, and detailed technical documentation including diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763201668/AMobileRepair_ougb1g.png",
-    "price": 900,
+    "price": 1200,
+    "offerPrice": 899,
     "category": "Services",
     "rating": 4.3,
     "repoURL": "https://github.com/yourrepo/mobile-repairing",
@@ -319,7 +340,8 @@
     "name": "Organic Fruit",
     "description": "A marketplace platform promoting organic fruit vendors with frontend/backend integration, comprehensive diagrams, and full documentation.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763202039/AFruitORG_i45jur.png",
-    "price": 700,
+    "price": 1300,
+    "offerPrice": 899,
     "category": "E-Commerce",
     "rating": 4.5,
     "repoURL": "https://github.com/yourrepo/organic-fruit",
@@ -334,7 +356,8 @@
     "name": "Pilow Mart",
     "description": "E-commerce platform focusing on pillows and home comfort products with detailed backend and frontend systems, and full project documentation.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763206245/APilowMart_yurdyx.png",
-    "price": 550,
+    "price": 2100,
+    "offerPrice": 1599,
     "category": "E-Commerce",
     "rating": 4.0,
     "repoURL": "https://github.com/yourrepo/pilow-mart",
@@ -349,7 +372,8 @@
     "name": "Restaurant Site",
     "description": "A fully functional restaurant website with online ordering, menu management, and backend services along with detailed system diagrams and documentation.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763206631/ARestu_nvsapy.png",
-    "price": 1100,
+    "price": 1400,
+    "offerPrice": 1100,
     "category": "Hospitality",
     "rating": 4.4,
     "repoURL": "https://github.com/yourrepo/restaurant-site",
@@ -365,6 +389,7 @@
     "description": "Social platform dedicated to fashion enthusiasts combining frontend/backend features with ample documentation and architectural diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763206874/AFashionClub_hcje1t.png",
     "price": 1400,
+    "offerPrice": 999,
     "category": "Social",
     "rating": 4.5,
     "repoURL": "https://github.com/yourrepo/fashion-club",
@@ -379,7 +404,8 @@
     "name": "Spa Site",
     "description": "A beautiful spa service website featuring booking, service catalog, dynamic frontend/backend code and complete documentation with diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763207079/ASpa-site_yw8t8u.png",
-    "price": 1000,
+    "price": 2000,
+    "offerPrice": 1499,
     "category": "Health & Wellness",
     "rating": 4.3,
     "repoURL": "https://github.com/yourrepo/spa-site",
@@ -394,7 +420,8 @@
     "name": "Pets Shop",
     "description": "An e-commerce site specializing in pet supplies, featuring frontend and backend functionalities, supported by comprehensive diagrams and documentation.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763207238/APet-Shop_kiowps.png",
-    "price": 750,
+    "price": 2100,
+    "offerPrice": 1499,
     "category": "E-Commerce",
     "rating": 4.0,
     "repoURL": "https://github.com/yourrepo/pets-shop",
@@ -409,7 +436,8 @@
     "name": "Stylish Shoe",
     "description": "A fashion-forward shoe e-commerce site featuring advanced backend support and an intuitive frontend experience with detailed system diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763207416/Asylish_lnesp0.png",
-    "price": 1200,
+    "price": 2100,
+    "offerPrice": 1599,
     "category": "E-Commerce",
     "rating": 4.5,
     "repoURL": "https://github.com/yourrepo/stylish-shoe",
@@ -424,7 +452,8 @@
     "name": "Yummy",
     "description": "An interactive online food ordering platform with seamless frontend/backend flow, complete with documentation and architecture diagrams.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763207570/AYummy_yxyccm.png",
-    "price": 900,
+    "price": 1500,
+    "offerPrice": 999,
     "category": "Food Delivery",
     "rating": 4.4,
     "repoURL": "https://github.com/yourrepo/yummy",
@@ -439,7 +468,7 @@
     "name": "Photos Gallery",
     "description": "A modern photo gallery app featuring seamless image display, organized albums, and a smooth, responsive user experience.",
     "imageURL": "https://res.cloudinary.com/dfayyzw68/image/upload/v1763264238/APhoto_loyu64.png",
-    "price": 900,
+    "price": 999,
     "category": "Photo App/Web",
     "rating": 4.4,
     "repoURL": "https://github.com/yourrepo/yummy",
